Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -805,7 +805,7 @@ At this stage most of the selected events contain neutrino-induced electromagnet
 
 The last cut aims at rejecting misreconstructed events and requires that the track and shower are not aligned. For reference, the full list of cuts is in Table~\ref{tab:1eNp:boxcut}.
 
-The resulting reconstructed \nue energy after the BDT selection is shown in Figure~\ref{fig:1eNp:box:RUN1}. Two events are 
+The resulting reconstructed \nue energy after the BDT selection is shown in Figure~\ref{fig:1eNp:box:RUN1}. Two events are found in the available $4.07E19$ POT dataset from Run1, with 
 
 \begin{table}[h!]
 \centering
